--- a/app/res/layout/screen_recovery.xml
+++ b/app/res/layout/screen_recovery.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:gravity="center"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingStart="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
     tools:viewBindingIgnore="true">
 
     <TextView
@@ -38,17 +39,20 @@
         android:visibility="gone"
         tools:text="Waiting"/>
 
-    <Button
+
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/retry_button"
+        android:layout_width="wrap_content"
         android:layout_below="@id/recovery_status"
         android:layout_centerHorizontal="true"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/standard_spacer_double"
-        android:layout_width="wrap_content"
         android:text="@string/recovery_retry"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/app_manager_button"
         android:layout_below="@id/retry_button"
         android:layout_centerHorizontal="true"
@@ -56,6 +60,8 @@
         android:layout_marginTop="@dimen/standard_spacer_double"
         android:layout_width="wrap_content"
         android:text="@string/recovery_app_manager"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 
 </RelativeLayout>
