--- a/app/res/layout/activity_crash_warning.xml
+++ b/app/res/layout/activity_crash_warning.xml
@@ -108,12 +108,12 @@
         </LinearLayout>
     </LinearLayout>
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/RestartCommCare"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/content_min_margin"
-        android:background="@color/cc_brand_color"
-        android:textColor="@color/cc_neutral_bg"/>
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 </RelativeLayout>
