--- a/app/res/layout/activity_target_mismatch_error.xml
+++ b/app/res/layout/activity_target_mismatch_error.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:gravity="center_horizontal"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/standard_spacer"
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                tools:viewBindingIgnore="true">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center_horizontal"
+    android:layout_height="match_parent"
+    android:layout_margin="@dimen/standard_spacer"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    tools:viewBindingIgnore="true">
 
     <TextView
         android:id="@+id/error_title"
@@ -38,12 +39,16 @@
             tools:text="In order to install CommCare LTS, Please click on install button below. Then try installing your app again."/>
     </LinearLayout>
 
-    <Button
-        style="@style/PromptedUpdateButtonUpdateLater"
+    <org.commcare.activities.components.RoundedButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:layout_marginTop="@dimen/standard_spacer_large"
         android:layout_below="@+id/error_info_container"
+        android:padding="8dp"
         android:id="@+id/install_app_button"
         android:layout_centerHorizontal="true"
-        tools:text="Install CommCare LTS"/>
+        tools:text="Install CommCare LTS"
+        app:roundButtonBackgroundColor="@color/cc_brand_color"
+        app:roundButtonTextColor="@color/cc_neutral_bg"/>
 
 </RelativeLayout>
