--- a/app/res/layout/app_manager.xml
+++ b/app/res/layout/app_manager.xml
@@ -35,8 +35,7 @@
         android:textColor="@color/darkest_grey"
         android:layout_centerHorizontal="true"
         android:gravity="center"/>
-
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/install_app_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,7 +44,11 @@
         android:layout_marginTop="@dimen/standard_spacer"
         android:paddingHorizontal="@dimen/standard_spacer_double"
         android:onClick="installAppClicked"
-        android:text="@string/install_app" />
+        android:text="@string/install_app"
+        app:roundButtonTextSize="10sp"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
+
 
     <ListView
         android:id="@+id/apps_list_view"
