--- a/app/res/layout/blank_missing_multimedia_layout.xml
+++ b/app/res/layout/blank_missing_multimedia_layout.xml
@@ -22,16 +22,18 @@
         android:paddingStart="20px">
     </ImageView>
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/skip_verification_button"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/skip_button_text"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/screen_multimedia_retry"
-        android:visibility="gone" />
+        android:visibility="gone"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white" />
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@id/screen_multimedia_retry"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -39,7 +41,9 @@
         android:text="@string/retry_button_text"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 
 
     <ScrollView
