--- a/app/res/layout/dotsdoses.xml
+++ b/app/res/layout/dotsdoses.xml
@@ -61,10 +61,12 @@
             android:id="@+id/dots_dose_four"></TableRow>
     </TableLayout>
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:id="@+id/btn_dots_doses_done"
         android:text="Done"
-        android:layout_alignParentBottom="true"></Button>
+        android:layout_alignParentBottom="true"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 </RelativeLayout>
