--- a/app/res/layout/draw_layout.xml
+++ b/app/res/layout/draw_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/draw_relative_layout"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -17,13 +18,16 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:layout_alignParentBottom="true">
 
-        <Button
+        <org.commcare.activities.components.RoundedButton
             android:id="@+id/btnFinishDraw"
             android:layout_width="wrap_content"
             android:enabled="false"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            app:roundButtonBackgroundColor="@color/button_primary"
+            app:roundButtonTextColor="@color/white"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,15 +35,20 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true">
 
-            <Button
+            <org.commcare.activities.components.RoundedButton
                 android:id="@+id/btnResetDraw"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                app:roundButtonBackgroundColor="@color/button_primary"
+                app:roundButtonTextColor="@color/white"/>
 
-            <Button
+            <org.commcare.activities.components.RoundedButton
                 android:id="@+id/btnCancelDraw"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_marginLeft="8dp"
+                android:layout_height="wrap_content"
+                app:roundButtonBackgroundColor="@color/button_primary"
+                app:roundButtonTextColor="@color/white"/>
 
         </LinearLayout>
 
