--- a/app/res/layout/entity_detail.xml
+++ b/app/res/layout/entity_detail.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/entity_detail"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:focusable="false"
     android:orientation="vertical"
     tools:viewBindingIgnore="true">
-
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/entity_select_button"
-        style="@style/ScreenPinnedButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:text="Continue"
-        android:layout_below="@+id/universal_frame_tile"/>
+        android:layout_below="@+id/universal_frame_tile"
+        app:roundButtonIcon="@drawable/icon_chevron_right_attnpos"
+        app:roundButtonBackgroundColor="@color/cc_attention_positive_bg"
+        app:roundButtonIconTintColor="@color/cc_attention_positive_text"
+        app:roundButtonTextColor="@color/cc_attention_positive_text"/>
+
 
     <FrameLayout
         android:id="@+id/ad_container"
