--- a/app/res/layout/fragment_setup_enter_url.xml
+++ b/app/res/layout/fragment_setup_enter_url.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/screen_first_start_main"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -64,18 +65,21 @@
                         >
                     </EditText>
                 </LinearLayout>
-
-                <Button
+                <org.commcare.activities.components.RoundedButton
                     android:id="@+id/start_install"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:text="Start Install"
+                    android:nextFocusUp="@+id/edit_password"
                     android:paddingTop="@dimen/content_start"
                     android:enabled="false"
                     android:paddingBottom="@dimen/content_start"
                     android:layout_marginTop="@dimen/content_min_margin"
                     android:layout_gravity="bottom"
-                    android:text="Start Install"
-                    android:nextFocusUp="@+id/edit_password" />
+                    app:roundButtonTextSize="10sp"
+                    app:roundButtonBackgroundColor="@color/primary_button_background"
+                    app:roundButtonTextColor="@color/white"/>
+
 
             </LinearLayout>
         </LinearLayout>
