--- a/app/res/layout/geo_progress.xml
+++ b/app/res/layout/geo_progress.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:viewBindingIgnore="true">
 
@@ -51,20 +52,24 @@
         android:orientation="horizontal"
         android:layout_weight="1">
 
-        <Button
+        <org.commcare.activities.components.RoundedButton
             android:id="@+id/geoOK"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Record Location"
-            android:layout_margin="@dimen/standard_spacer"/>
+            android:layout_margin="@dimen/standard_spacer"
+            app:roundButtonBackgroundColor="@color/primary_button_background"
+            app:roundButtonTextColor="@color/white"/>
 
-        <Button
+        <org.commcare.activities.components.RoundedButton
             android:id="@+id/geoCancel"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
             android:text="Cancel"
-            android:layout_margin="@dimen/standard_spacer"/>
+            android:layout_margin="@dimen/standard_spacer"
+            app:roundButtonBackgroundColor="@color/primary_button_background"
+            app:roundButtonTextColor="@color/white"/>
     </LinearLayout>
 </LinearLayout>
