--- a/app/res/layout/install_permission_requester.xml
+++ b/app/res/layout/install_permission_requester.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/screen_first_start_main"
+<RelativeLayout android:id="@+id/screen_first_start_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/cc_core_bg"
     android:orientation="vertical"
-    tools:viewBindingIgnore="true">
+    tools:viewBindingIgnore="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ScrollView
         android:layout_width="fill_parent"
@@ -52,16 +52,16 @@
                 android:layout_marginStart="@dimen/content_min_margin"
                 android:layout_marginEnd="@dimen/content_min_margin" />
 
-            <Button
+            <org.commcare.activities.components.RoundedButton
                 android:id="@+id/get_perms_button"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:background="@color/cc_brand_color"
                 android:nextFocusUp="@+id/edit_password"
                 android:paddingBottom="@dimen/content_start"
                 android:paddingTop="@dimen/content_start"
-                android:textColor="@color/cc_neutral_bg"/>
+                app:roundButtonBackgroundColor="@color/primary_button_background"
+                app:roundButtonTextColor="@color/cc_neutral_bg"/>
 
         </LinearLayout>
     </ScrollView>
