--- a/app/res/layout/layout_note_msg.xml
+++ b/app/res/layout/layout_note_msg.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin"
     tools:viewBindingIgnore="true">
@@ -42,11 +43,13 @@
         android:text="What to do about it"
         android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/layout_note_msg_action_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button"
-        android:visibility="gone" />
+        android:visibility="visible"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 
 </LinearLayout>
