--- a/app/res/layout/multiple_apps_limit_view.xml
+++ b/app/res/layout/multiple_apps_limit_view.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:viewBindingIgnore="true">
 
@@ -14,14 +16,16 @@
         android:layout_centerInParent="true"
         android:gravity="center"/>
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/back_to_manager_button"
         android:layout_marginBottom="@dimen/standard_spacer_large"
         android:text="Go to App Manager"
-        android:textSize="19sp"
+        app:roundButtonTextSize="14sp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 
 </RelativeLayout>
