--- a/app/res/layout/prompt_view.xml
+++ b/app/res/layout/prompt_view.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:viewBindingIgnore="true">
 
     <TextView
@@ -35,20 +36,28 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/standard_spacer_double"
                 android:gravity="center"/>
-
-            <Button
+            <org.commcare.activities.components.RoundedButton
                 android:id="@+id/action_button"
-                style="@style/PromptedUpdateButtonUpdate" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                app:roundButtonTextColor="@color/cc_neutral_bg"
+                app:roundButtonBackgroundColor="@color/solid_green"
+                />
 
             <ImageView
                 android:id="@+id/image_cue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/standard_spacer_double"/>
-
-            <Button
+            <org.commcare.activities.components.RoundedButton
                 android:id="@+id/do_later_button"
-                style="@style/PromptedUpdateButtonUpdateLater"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                app:roundButtonTextColor="@color/cc_neutral_bg"
+                app:roundButtonBackgroundColor="@color/cc_brand_color"
+                />
 
             <TextView
                 android:id="@+id/help_text"
