--- a/app/res/layout/recording.xml
+++ b/app/res/layout/recording.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -9,10 +10,12 @@
     android:layout_marginTop="10dp"
     tools:viewBindingIgnore="true">
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id = "@+id/startrecording"/>
+        android:id = "@+id/startrecording"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 
 
     <ProgressBar
@@ -23,9 +26,11 @@
         android:id = "@+id/recordingprogress"
         android:background="@color/blue"/>
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/stoprecording"/>
+        android:id="@+id/stoprecording"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 
 </LinearLayout>
