--- a/app/res/layout/scrolling_calendar_widget.xml
+++ b/app/res/layout/scrolling_calendar_widget.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:paddingLeft="20dp"
@@ -134,7 +135,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true" />
 
-        <Button
+        <org.commcare.activities.components.RoundedButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/lightest_grey"
@@ -143,7 +144,9 @@
             android:id="@+id/today"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/standard_spacer"
-            android:layout_marginBottom="@dimen/standard_spacer"/>
+            android:layout_marginBottom="@dimen/standard_spacer"
+            app:roundButtonBackgroundColor="@color/primary_button_background"
+            app:roundButtonTextColor="@color/white"/>
 
         <ImageButton
             android:layout_width="25dp"
