--- a/app/res/layout/single_app_view.xml
+++ b/app/res/layout/single_app_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
@@ -36,37 +37,45 @@
         style="@style/TextAppearance.AppCompat.Body2"
         android:visibility="visible"/>
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/uninstall_button"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/standard_spacer"
         android:layout_width="fill_parent"
         android:onClick="rebootAlertDialog"
-        android:text="@string/uninstall_app" />
+        android:text="@string/uninstall_app"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white" />
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/archive_button"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/standard_spacer"
         android:layout_width="fill_parent"
         android:onClick="toggleArchiveClicked"
-        android:text="@string/archive_app" />
+        android:text="@string/archive_app"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white" />
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:id="@+id/update_button"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/standard_spacer"
         android:layout_width="fill_parent"
         android:onClick="updateClicked"
-        android:text="@string/update_app" />
+        android:text="@string/update_app"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white"/>
 
-    <Button
+    <org.commcare.activities.components.RoundedButton
         android:clickable="true"
         android:id="@+id/verify_button"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/standard_spacer"
         android:layout_width="fill_parent"
         android:onClick="verifyResourcesClicked"
-        android:text="@string/verify_resources" />
+        android:text="@string/verify_resources"
+        app:roundButtonBackgroundColor="@color/primary_button_background"
+        app:roundButtonTextColor="@color/white" />
 
 </LinearLayout>
