--- a/app/res/layout/user_get_available_apps.xml
+++ b/app/res/layout/user_get_available_apps.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -134,13 +135,15 @@
                     android:layout_marginStart="@dimen/standard_spacer_large"
                     android:layout_marginEnd="@dimen/standard_spacer_large" />
 
-                <Button
+                <org.commcare.activities.components.RoundedButton
                     android:id="@+id/get_apps_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/see_available_apps"
                     android:paddingHorizontal="@dimen/standard_spacer_double"
-                    android:layout_marginTop="@dimen/standard_spacer_double" />
+                    android:layout_marginTop="@dimen/standard_spacer_double"
+                    app:roundButtonBackgroundColor="@color/primary_button_background"
+                    app:roundButtonTextColor="@color/white"/>
 
                 <TextView
                     android:id="@+id/error_message"
