--- a/app/res/layout/choice_dialog_three_panel.xml
+++ b/app/res/layout/choice_dialog_three_panel.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              tools:viewBindingIgnore="true">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:viewBindingIgnore="true">
 
     <include
         android:id="@+id/choice_dialog_title"
@@ -24,40 +25,49 @@
         android:layout_marginEnd="@dimen/standard_spacer_large"
         android:layout_marginStart="@dimen/standard_spacer_large">
 
-        <Button
+        <org.commcare.activities.components.RoundedButton
             android:id="@+id/choice_dialog_panel_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
             android:drawablePadding="5dp"
             android:layout_marginRight="@dimen/standard_spacer"
             android:paddingTop="15dp"
-            android:layout_marginEnd="@dimen/standard_spacer" />
+            android:layout_marginEnd="@dimen/standard_spacer"
+            app:roundButtonBorderVisible="true"
+            app:roundButtonBorderColor="@color/cc_brand_color"
+            app:roundButtonTextColor="@color/cc_brand_color"
+            app:roundButtonBackgroundColor="@color/transparent"/>
 
-        <Button
+        <org.commcare.activities.components.RoundedButton
             android:id="@+id/choice_dialog_panel_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
             android:drawablePadding="5dp"
             android:layout_marginLeft="@dimen/standard_spacer"
             android:layout_marginRight="@dimen/standard_spacer"
             android:paddingTop="15dp"
             android:layout_marginStart="@dimen/standard_spacer"
-            android:layout_marginEnd="@dimen/standard_spacer" />
+            android:layout_marginEnd="@dimen/standard_spacer"
+            app:roundButtonBorderVisible="true"
+            app:roundButtonBorderColor="@color/cc_brand_color"
+            app:roundButtonTextColor="@color/cc_brand_color"
+            app:roundButtonBackgroundColor="@color/transparent"/>
 
-        <Button
+        <org.commcare.activities.components.RoundedButton
             android:id="@+id/choice_dialog_panel_3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
             android:drawablePadding="5dp"
             android:layout_marginLeft="@dimen/standard_spacer"
             android:paddingTop="15dp"
-            android:layout_marginStart="@dimen/standard_spacer" />
+            app:roundButtonBorderVisible="true"
+            app:roundButtonBorderColor="@color/cc_brand_color"
+            app:roundButtonTextColor="@color/cc_brand_color"
+            android:layout_marginStart="@dimen/standard_spacer"
+            app:roundButtonBackgroundColor="@color/transparent"/>
 
     </LinearLayout>
 
