--- a/app/res/layout/progress_dialog_cancel_button.xml
+++ b/app/res/layout/progress_dialog_cancel_button.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Button xmlns:android="http://schemas.android.com/apk/res/android"
+<org.commcare.activities.components.RoundedButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="@dimen/min_button_height"
     android:layout_below="@+id/main_content_holder"
@@ -9,10 +10,14 @@
     android:layout_marginEnd="@dimen/standard_spacer_large"
     android:layout_marginRight="@dimen/standard_spacer_large"
     android:layout_marginBottom="@dimen/standard_spacer"
-    android:background="@android:color/transparent"
     android:padding="@dimen/standard_spacer"
+    android:textAllCaps="true"
+    app:roundButtonTextColor="@color/cc_brand_color"
+    app:roundButtonBorderVisible="true"
+    app:roundButtonBorderColor="@color/cc_brand_color"
     style="@style/CommCare.Button.Default"
     android:text="STOP"
-    android:textSize="@dimen/font_size_dp_medium"
+    app:roundButtonTextSize="12sp"
+    app:roundButtonBackgroundColor="@color/transparent"
     android:visibility="gone"
-    tools:viewBindingIgnore="true"/>
+    tools:viewBindingIgnore="true" />
